2003-09-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/api/types.html: Update description of MonitorHandler.

2003-09-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Set CXX to PTHREAD_CXX if necessary (and warn).
	* acinclude.m4 (ACX_PTHREAD): Add check to see if xlC_r should be
	used for AIX.

2003-09-10  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* magick/render.c: Fixed handling of arc primitive (see IM-5.5.8).

2003-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.h: It seems that test programs are using
	GetMagickModule so make it visible by default.
	* configure.ac: Use GM_FUNC_MMAP_FILEIO macro to test mmap.
	* acinclude.m4 (GM_FUNC_MMAP_FILEIO): New macro to test mmap's
	capability to do coherent file I/O.  The AC_FUNC_MMAP macro
	was not testing the mmap features that GraphicsMagick uses, and
	was failing on a number of systems.
	* magick/blob.c (BlobMapModeToString): Only include this static
	function if HAVE_MMAP is defined.
	* coders/locale.c (WriteLOCALEImage): Fix FormatString argument
	type inconsistencies.
	* wand/magick_compat.h: Change MagickExport to WandExport.
	* coders/jpeg.c, coders/locale.c, coders/meta.c, coders/miff.c,
	coders/palm.c, coders/pict.c, coders/svg.c, coders/tiff.c,
	coders/topol.c, magick/cache.c, magick/display.c, magick/image.c,
	magick/widget.c: Removed unused values, changed storage types, or
	added explicit casts, in order to reduce the number of "REMARK"s
	when using the SGI IRIX compiler.
	* magick/render.c (DrawClipPath): Fix memory leak of
	clone_info->clip_path.  Problem reported by Vladimir
	<lvm@integrum.ru>.
	(DestroyDrawInfo): Remove unnecessary checks for non-null prior to
	invoking MagickFreeMemory. MagickFreeMemory already checks for
	non-null.
	* magick/log.h (GetCurrentFunction): Apparently Visual C++ 6.0
	does not support __FUNCTION__.  Problem reported by Vladimir
	<lvm@integrum.ru>.